sct imgs changes

--- a/index.html
+++ b/index.html
@@ -145,14 +145,14 @@
 
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
-                        <p>Technical Arctitect</p>
+                        <p>Technical Architect</p>
                         <p></p>
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/sct.tiff" class="img-responsive" alt="">
+                        <img src="img/portfolio/sct.png" class="img-responsive" alt="">
                     </a>
                 </div>
 <!--                 <div class="col-sm-4 portfolio-item">
